--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/ngrok": "^4.1.3",
+    "@google/generative-ai": "^0.24.1",
+    "babel-preset-expo": "~54.0.0",
+    "clsx": "^2.1.1",
     "expo": "~54.0.25",
+    "expo-image-picker": "~17.0.8",
+    "expo-media-library": "~18.2.0",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.554.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-css-interop": "^0.2.1",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
