--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "lexia-mobile",
   "version": "1.0.0",
   "main": "index.ts",
+  "homepage": "https://Freixanet.github.io/lexia-app",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "export": "expo export --platform web",
+    "predeploy": "npm run export",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -15,6 +19,7 @@
     "babel-preset-expo": "~54.0.0",
     "clsx": "^2.1.1",
     "expo": "~54.0.25",
+    "expo-clipboard": "~8.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-media-library": "~18.2.0",
     "expo-status-bar": "~3.0.8",
@@ -33,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.9.2"
   },
   "private": true
