Fix baseUrl trailing slash for GitHub Pages

--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       "favicon": "./assets/favicon.png"
     },
     "experiments": {
-      "baseUrl": "/lexia-app/"
+      "baseUrl": "/lexia-app"
     }
   }
 }
