--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "export": "expo export --platform web",
+    "export": "expo export --platform web && touch dist/.nojekyll",
     "predeploy": "npm run export",
     "deploy": "gh-pages -d dist"
   },
